keep up with suite and chatzilla development

--- a/de/extensions/irc/chrome/chatzilla.properties
+++ b/de/extensions/irc/chrome/chatzilla.properties
@@ -271,6 +271,9 @@ cmd.dcc-send.params = [<nickname> [<file>]]
 cmd.dcc-send.help   = Bietet |nickname| eine Datei an. In einer Query-Ansicht kann |nickname| ausgelassen werden, um das Angebot dem Benutzer der Query-Ansicht zu senden. Eine Datei kann direkt angegeben werden, indem |file| übergeben wird, oder, wenn dies ausgelassen wird, in einem Durchsuchen-Dialog ausgewählt werden.
 cmd.dcc-send.label  = Datei senden…
 
+cmd.dcc-show-file.params = <file>
+cmd.dcc-show-file.help   = Öffnet den Ordner, der die Datei enthält, die Sie heruntergeladen haben.
+
 cmd.delete-view.key    = accel W
 cmd.delete-view.label  = Tab s&chließen
 cmd.delete-view.params = [<view>]
@@ -972,7 +975,7 @@ msg.no.matching.nicks = Es gibt keine Benutzer, die mit Ihrer Suche übereinstim
 msg.commands.header   = Geben Sie /help <Kommandoname> ein, um Informationen über ein bestimmtes Kommando zu bekommen.
 msg.matching.commands = Aktuell implementierte Kommandos, die mit dem Muster ''%S'' übereinstimmen, sind [%S].\nGeben Sie /help <command-name> ein, um Informationen über ein spezifisches Kommando zu erhalten.
 msg.all.commands      = Derzeit implementierte Kommandos sind [%S].
-msg.help.intro        = Hilfe ist an verschiedenen Stellen verfügbar:\n  - |/commands| listet alle eingebauten Kommandos in ChatZilla auf. Verwenden Sie |/help <command-name>|, um Hilfe zu einzelnen Kommandos zu bekommen.\n  - Die IRC-Website <http://www.irchelp.org/> (Englisch) stellt einführendes Material für neue IRC-Benutzer zur Verfügung.\n  - Die ChatZilla-FAQ <http://chatzilla.hacksrus.com/faq> (Englisch) beantwortet viele übliche Fragen zur Verwendung von ChatZilla.\n  - Der ChatZilla-Support-Channel <irc://moznet/chatzilla> (Englisch) ist immer verfügbar, um weitere Fragen zu beantworten.
+msg.help.intro        = Hilfe ist an mehreren Stellen verfügbar:\n  - |/commands| listet alle eingebauten Kommandos in ChatZilla auf. Verwenden Sie |/help <command-name>|, um Hilfe zu einzelnen Kommandos zu bekommen.\n  - Die IRC-Website <http://www.irchelp.org/> (Englisch) stellt einführendes Material für neue IRC-Benutzer zur Verfügung.\n  - Die ChatZilla-Website <http://chatzilla.hacksrus.com/> (Englisch) stellt zusätzliche Informationen zu IRC und ChatZilla zur Verfügung, inklusive der ChatZilla-FAQ <http://chatzilla.hacksrus.com/faq>, die viele übliche Fragen zur Verwendung von ChatZilla beantwortet.
 msg.about.version     = "%S [[Details][Öffnet "Über"-Dialog für weitere Details][%S]]
 msg.about.homepage    = Bitte besuchen Sie die ChatZilla-Homepage auf <http://chatzilla.hacksrus.com/>, um weitere Informationen zu erhalten.
 msg.client.opened     = JavaScript-Konsole für '*client*' geöffnet.
@@ -1088,7 +1091,10 @@ msg.dccfile.aborted      = DCC-Dateiübertragung von ''%S'' %S ''%S'' (%S:%S) ab
 msg.dccfile.failed       = DCC-Dateiübertragung von ''%S'' %S ''%S'' (%S:%S) fehlgeschlagen.
 msg.dccfile.opened       = DCC-Dateiübertragung von ''%S'' %S ''%S'' (%S:%S) gestartet.
 msg.dccfile.closed.sent  = DCC-Dateiübertragung von ''%S'' %S ''%S'' (%S:%S) beendet.
-msg.dccfile.closed.saved = DCC-Dateiübertragung von ''%S'' %S ''%S'' (%S:%S) beendet. Datei gespeichert unter "%S".
+# 6 = path, 7 = command for opening the folder
+msg.dccfile.closed.saved     = DCC-Dateiübertragung von ''%S'' %S ''%S'' (%S:%S) beendet. Datei gespeichert unter "%S". [[Speicherort öffnen][Öffnet den Ordner, in dem die heruntergeladene Datei gespeichert wurde][%S]]
+msg.dccfile.closed.saved.mac = DCC-Dateiübertragung von ''%S'' %S ''%S'' (%S:%S) beendet. Datei gespeichert unter "%S". [[In Finder anzeigen][Zeigt jenen Ordner in Finder an, in dem die Datei gespeichert wurde][%S]]
+
 # 1 = percent, 2 = current pos, 3 = total size, 4 = speed.
 msg.dccfile.progress     = %S%% fertig, %S von %S, %S.
 msg.dccfile.send         = Datei zum Senden auswählen
