--- a/de/suite/chrome/common/permissions/cookieViewer.properties
+++ b/de/suite/chrome/common/permissions/cookieViewer.properties
@@ -53,3 +53,6 @@ deleteAllCookiesYes=&Entfernen
 deleteAllCookiesSites=Sollen wirklich alle Cookie-Websites gelöscht werden?
 deleteAllSitesTitle=Alle Websites entfernen
 deleteAllSitesYes=&Entfernen
+deleteSelectedCookies=Sollen die ausgwählten Cookies wirklich gelöscht werden?
+deleteSelectedCookiesTitle=Ausgewählte Cookie entfernen
+deleteSelectedCookiesYes=&Entfernen
