--- a/de/suite/chrome/mailnews/messenger.properties
+++ b/de/suite/chrome/mailnews/messenger.properties
@@ -422,3 +422,8 @@ emptyTrashDontAsk=Nicht mehr nachfragen.
 # junkCommands.js
 junkAnalysisPercentComplete=Junk-Analyse %S komplett
 processingJunkMessages=Junk-Nachrichten werden verarbeitet
+
+# Messenger bootstrapping messages
+fileNotFoundTitle = Datei nicht gefunden
+#LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
+fileNotFoundMsg = Die Datei %S existiert nicht.
