--- a/de/suite/chrome/mailnews/search-attributes.properties
+++ b/de/suite/chrome/mailnews/search-attributes.properties
@@ -47,7 +47,7 @@
 40=reserviert für AB
 41=reserviert für AB
 42=reserviert für AB
-43=reserviert für AB
+43=Von, An oder CC
 44=Quelle der Junk-Bewertung
 45=Junk-Prozent
 46=Attachment-Status
