--- a/sq/toolkit/chrome/global/commonDialogs.properties
+++ b/sq/toolkit/chrome/global/commonDialogs.properties
@@ -7,9 +7,9 @@ Yes=&Po
 OK=OK
 Prompt=Gati
 Alert=Njoftim
-DontSave=&Mos Ruaj
+DontSave=&Mos e Ruaj
 Confirm=Ripohoni
-Revert=&Rikthe
+Revert=&Riktheje
 Cancel=Anuloje
 Save=&Ruaje
 PromptUsernameAndPassword2=Lypset Mirëfilltësim
