first commiting into l10-centrale

--- a/sq/browser/chrome/browser/aboutRights.properties
+++ b/sq/browser/chrome/browser/aboutRights.properties
@@ -1,3 +1,3 @@
 buttonLabel = Njihni të drejtat tuaja…
 buttonAccessKey = N
-notifyText = %S-i është program falas dhe i hapur, prej fondacionit jofitimprurës Mozilla Foundation.
+notifyRightsText = %S-i është program falas dhe i hapur, prej fondacionit jofitimprurës Mozilla Foundation.
