use more common words for digital signiture and CRLs

--- a/de/security/manager/chrome/pipnss/pipnss.properties
+++ b/de/security/manager/chrome/pipnss/pipnss.properties
@@ -139,8 +139,8 @@ CertDumpSubjectUniqueID=Eindeutige ID des Inhabers
 CertDumpExtensions=Erweiterungen
 CertDumpCertType=Netscape-Zertifikatstyp
 CertDumpNSCertExtBaseUrl=Netscape Zertifikat Erweiterungs-Basis-URL
-CertDumpNSCertExtRevocationUrl=Netscape Zertifikat Rücknahme-URL
-CertDumpNSCertExtCARevocationUrl=Netscape Zertifikat Zertifizierungsstellen-Rücknahme-URL
+CertDumpNSCertExtRevocationUrl=Netscape-Zertifikat-Sperr-URL
+CertDumpNSCertExtCARevocationUrl=Netscape-Zertifizierungsstellen-Sperr-URL
 CertDumpNSCertExtCertRenewalUrl=Netscape Zertifikat Erneuerungs-URL
 CertDumpNSCertExtCAPolicyUrl=Netscape Zertifikat Zertifizierungsstellen-Regeln-URL
 CertDumpNSCertExtSslServerName=Netscape Zertifikat SSL-Server-Name
@@ -177,7 +177,7 @@ CertDumpKUCRLSigner=CRL-Unterzeichner
 CertDumpCritical=Kritisch
 CertDumpNonCritical=Nicht kritisch
 CertDumpSigAlg=Zertifikatsunterzeichnungs-Algorithmus
-CertDumpCertSig=Unterschriftswert des Zertifikats
+CertDumpCertSig=Signaturwert des Zertifikats
 CertDumpExtensionFailure=Fehler: Erweiterung konnte nicht verarbeitet werden
 CertDumpIsCA=Ist eine Zertifizierungsstelle
 CertDumpIsNotCA=Ist keine Zertifizierungsstelle
@@ -185,13 +185,13 @@ CertDumpPathLen=Maximale Anzahl an Zwischen-Zertifizierungsstellen: %S
 CertDumpPathLenUnlimited=uneingeschränkt
 CertDumpEKU_1_3_6_1_5_5_7_3_1=TLS-Webserver-Authentifikation
 CertDumpEKU_1_3_6_1_5_5_7_3_2=TLS-Web-Client-Authentifikation
-CertDumpEKU_1_3_6_1_5_5_7_3_3=Code-Unterschrift
+CertDumpEKU_1_3_6_1_5_5_7_3_3=Code-Signatur
 CertDumpEKU_1_3_6_1_5_5_7_3_4=E-Mail-Schutz
 CertDumpEKU_1_3_6_1_5_5_7_3_8=Zeitstempel
-CertDumpEKU_1_3_6_1_5_5_7_3_9=OCSP-Unterschrift
-CertDumpEKU_1_3_6_1_4_1_311_2_1_21=Microsoft-Privat-Code-Unterschrift
-CertDumpEKU_1_3_6_1_4_1_311_2_1_22=Microsoft-Kommerz-Code-Unterschrift
-CertDumpEKU_1_3_6_1_4_1_311_10_3_1=Microsoft-Vertrauenslisten-Unterschrift
+CertDumpEKU_1_3_6_1_5_5_7_3_9=OCSP-Signatur
+CertDumpEKU_1_3_6_1_4_1_311_2_1_21=Microsoft-Privat-Code-Signatur
+CertDumpEKU_1_3_6_1_4_1_311_2_1_22=Microsoft-Kommerz-Code-Signatur
+CertDumpEKU_1_3_6_1_4_1_311_10_3_1=Microsoft-Vertrauenslisten-Signatur
 CertDumpEKU_1_3_6_1_4_1_311_10_3_2=Microsoft-Zeitstempel
 CertDumpEKU_1_3_6_1_4_1_311_10_3_3=Microsoft servergesperrte Kryptographie
 CertDumpEKU_1_3_6_1_4_1_311_10_3_4=Microsoft-Dateisystemverschlüsselung
@@ -199,8 +199,8 @@ CertDumpEKU_1_3_6_1_4_1_311_10_3_4_1=Microsoft-Dateiwiederherstellung
 CertDumpEKU_1_3_6_1_4_1_311_10_3_5=Microsoft-Windows-Hardwaretreiber-Verifikation
 CertDumpEKU_1_3_6_1_4_1_311_10_3_10=Microsoft bedingte Unterordnung
 CertDumpEKU_1_3_6_1_4_1_311_10_3_11=Microsoft-Schlüsselwiederherstellung
-CertDumpEKU_1_3_6_1_4_1_311_10_3_12=Microsoft-Dokument-Unterschrift
-CertDumpEKU_1_3_6_1_4_1_311_10_3_13=Microsoft-Lebenszeit-Unterschrift
+CertDumpEKU_1_3_6_1_4_1_311_10_3_12=Microsoft-Dokument-Signatur
+CertDumpEKU_1_3_6_1_4_1_311_10_3_13=Microsoft-Lebenszeit-Signatur
 CertDumpEKU_1_3_6_1_4_1_311_20_2_2=Microsoft-SmartCard-Logon
 CertDumpEKU_1_3_6_1_4_1_311_21_6=Microsoft-Schlüsselwiederherstellungsdienst
 CertDumpMSCerttype=Microsoft-Zertifikatsvorlagenname
@@ -296,7 +296,7 @@ VerifySSLClient_p=Client
 VerifySSLServer_p=Server
 VerifySSLStepUp_p=Step-up
 VerifySSLCA_p=SSL CA
-VerifyEmailSigner_p=Unterschrift
+VerifyEmailSigner_p=Signatur
 VerifyEmailRecip_p=Verschlüsseln
 VerifyProtectObjSign_p=Unterzeichner des geschützten Objekts
 VerifyObjSign_p=Objektunterzeichner
@@ -342,7 +342,7 @@ SSLConnectionErrorPrefix=Ein Fehler ist während einer Verbindung mit %S aufgetr
 
 certErrorIntro=%S verwendet ein ungültiges Sicherheitszertifikat.
 
-certErrorTrust_SelfSigned=Dem Zertifikat wird nicht vertraut, weil es selbst unterschrieben wurde.
+certErrorTrust_SelfSigned=Dem Zertifikat wird nicht vertraut, weil es vom Aussteller selbst signiert wurde.
 certErrorTrust_UnknownIssuer=Dem Zertifikat wird nicht vertraut, weil das Aussteller-Zertifikat unbekannt ist.
 certErrorTrust_CaInvalid=Dem Zertifikat wird nicht vertraut, weil es von einem ungültigen Zertifizierungsstellen-Zertifikat ausgestellt wurde.
 certErrorTrust_Issuer=Dem Zertifikat wird nicht vertraut, weil dem Aussteller-Zertifikat nicht vertraut wird.
@@ -370,7 +370,7 @@ CertInfoPurposes=Zwecke
 CertInfoEmail=E-Mail
 CertInfoStoredIn=Gespeichert in:
 P12DefaultNickname=Importiertes Zertifikat
-CrlImportFailure1x=Die Anwendung kann die Zertifikat-Widerrufsliste (CRL) nicht importieren.
+CrlImportFailure1x=Die Anwendung kann die Zertifikatsperrliste (CRL) nicht importieren.
 CrlImportFailureExpired=Eine neuere Version dieser CRL ist verfügbar.
 CrlImportFailureBadSignature=CRL hat eine ungültige Signatur.
 CrlImportFailureInvalid=Neue CRL hat ein ungültiges Format.
