--- a/de/security/manager/chrome/pippki/pippki.properties
+++ b/de/security/manager/chrome/pippki/pippki.properties
@@ -154,7 +154,7 @@ fips_nonempty_password_required=FIPS-Modus benötigt ein Master-Passwort für je
 
 # CRL next update.
 crlNextUpdateMsg1=%S kann keine verschlüsselte Verbindung mit "%S" herstellen.
-crlNextUpdateMsg2=Die Zertifikat-Widerrufsliste (CRL) von "%S" muss erneuert werden.
+crlNextUpdateMsg2=Die Zertifikatsperrliste (CRL) von "%S" muss erneuert werden.
 NoUpdateFailure=Keines
 lastFetchUrlLabel=URL ursprünglich geholt von
 advertisedUrlLabel=URL bekanntgegeben von der CA
@@ -174,7 +174,7 @@ crlAutoupdateEnabled=Aktiviert
 crlAutoupdateNotEnabled=Nicht aktiviert
 crlAutoupdateOk=OK
 crlAutoupdateFailed=Fehlgeschlagen
-crlImportNewCRLTitle=Zertifikat-Widerrufsliste importieren
+crlImportNewCRLTitle=Zertifikatsperrliste importieren
 crlImportNewCRLLabel=CRL importieren von:
 
 #Import certificate(s) file dialog
@@ -184,7 +184,7 @@ importServerCertPrompt=Wählen Sie die Datei mit dem zu importierenden Server-Ze
 file_browse_Certificate_spec=Zertifikat-Dateien
 
 # Form Signing confirmation prompt
-formSigningIntro=Die Website '%S' hat gefordert, dass Sie die folgende Textnachricht unterschreiben:
+formSigningIntro=Die Website '%S' hat gefordert, dass Sie die folgende Textnachricht signieren:
 
 # Cert export
 SaveCertAs=Zertifikate in Datei speichern
