--- a/de/suite/chrome/mailnews/smime/msgSecurityInfo.properties
+++ b/de/suite/chrome/mailnews/smime/msgSecurityInfo.properties
@@ -1,30 +1,30 @@
 ## Signature Information strings
-SINoneLabel=Nachricht hat keine digitale Unterschrift
-SINone=Diese Nachricht enthält keine Unterschrift des Absenders. Das Fehler einer digitalen Unterschrift heißt, dass die Nachricht eventuell von jemandem gesendet wurde, der vorgibt, diese E-Mail-Adresse zu besitzen. Es ist auch möglich, dass die Nachricht während der Übertragung über das Netzwerk verändert wurde. Trotzdem ist es unwahrscheinlich, dass eine dieser Handlungen geschehen ist.
+SINoneLabel=Nachricht hat keine digitale Signatur
+SINone=Diese Nachricht enthält keine digitale Signatur des Absenders. Das Fehler einer digitalen Signatur heißt, dass die Nachricht eventuell von jemandem gesendet wurde, der vorgibt, diese E-Mail-Adresse zu besitzen. Es ist auch möglich, dass die Nachricht während der Übertragung über das Netzwerk verändert wurde. Trotzdem ist es unwahrscheinlich, dass eine dieser Handlungen geschehen ist.
 
-SIValidLabel=Nachricht wurde unterschrieben
-SIValid=Diese Nachricht enthält eine gültige digitale Unterschrift. Die Nachricht wurde nicht verändert, seit sie gesendet wurde.
+SIValidLabel=Nachricht ist signiert
+SIValid=Diese Nachricht enthält eine gültige digitale Signatur. Die Nachricht wurde nicht verändert, seit sie gesendet wurde.
 
-SIInvalidLabel=Digitale Unterschrift ist nicht gültig
-SIInvalidHeader=Diese Nachricht enthält eine digitale Unterschrift, aber die Unterschrift ist ungültig.
+SIInvalidLabel=Digitale Signatur ist nicht gültig
+SIInvalidHeader=Diese Nachricht enthält eine digitale Signatur, aber die Signatur ist ungültig.
 
-SIContentAltered=Die Unterschrift stimmt nicht korrekt mit dem Nachrichteninhalt überein. Die Nachricht scheint verändert worden zu sein, nachdem der Absender sie unterschrieben hat. Sie sollten der Gültigkeit dieser Nachricht nicht vertrauen, bevor Sie ihre Inhalte mit dem Absender überprüft haben.
-SIExpired=Das zum Unterschreiben der Nachricht verwendete Zertifikat scheint abgelaufen zu sein. Stellen Sie sicher, dass die Uhr Ihres Computers richtig eingestellt ist.
-SIRevoked=Das zum Unterschreiben der Nachricht verwendete Zertifikat wurde widerrufen. Sie sollten der Gültigkeit dieser Nachricht nicht vertrauen, bevor Sie ihre Inhalte mit dem Absender überprüft haben.
-SINotYetValid=Das zum Unterschreiben der Nachricht verwendete Zertifikat scheint noch nicht gültig zu sein. Stellen Sie sicher, dass die Uhr Ihres Computers richtig eingestellt ist.
-SIUnknownCA=Das zum Unterschreiben der Nachricht verwendete Zertifikat wurde von einer unbekannten Zertifizierungsstelle ausgestellt.
-SIUntrustedCA=Das zum Unterschreiben der Nachricht verwendete Zertifikat wurde von einer Zertifizierungsstelle ausgestellt, der Sie für diese Art von Zertifikaten nicht vertrauen.
-SIExpiredCA=Das zum Unterschreiben der Nachricht verwendete Zertifikat wurde von einer Zertifizierungsstelle ausgestellt, deren eigenes Zertifikat abgelaufen ist. Stellen Sie sicher, dass die Uhr Ihres Computers richtig eingestellt ist.
-SIRevokedCA=Das zum Unterschreiben der Nachricht verwendete Zertifikat wurde von einer Zertifizierungsstelle ausgestellt, deren eigenes Zertifikat widerrufen wurde. Sie sollten der Gültigkeit dieser Nachricht nicht vertrauen, bevor Sie ihre Inhalte mit dem Absender überprüft haben.
-SINotYetValidCA=Das zum Unterschreiben der Nachricht verwendete Zertifikat wurde von einer Zertifizierungsstelle ausgestellt, deren eigenes Zertifikat noch nicht gültig ist. Stellen Sie sicher, dass die Uhr Ihres Computers richtig eingestellt ist.
-SIInvalidCipher=Die Nachricht wurde mit einer Verschlüsselungsstärke unterschrieben, die diese Version Ihrer Software nicht unterstützt.
-SIClueless=Es gibt unbekannte Probleme mit dieser digitalen Unterschrift. Sie sollten der Gültigkeit dieser Nachricht nicht vertrauen, bevor Sie ihre Inhalte mit dem Absender überprüft haben.
+SIContentAltered=Die Signatur stimmt nicht korrekt mit dem Nachrichteninhalt überein. Die Nachricht scheint verändert worden zu sein, nachdem der Absender sie signiert hat. Sie sollten der Gültigkeit dieser Nachricht nicht vertrauen, bevor Sie ihre Inhalte mit dem Absender überprüft haben.
+SIExpired=Das zum Signieren der Nachricht verwendete Zertifikat scheint abgelaufen zu sein. Stellen Sie sicher, dass die Uhr Ihres Computers richtig eingestellt ist.
+SIRevoked=Das zum Signieren der Nachricht verwendete Zertifikat wurde gesperrt. Sie sollten der Gültigkeit dieser Nachricht nicht vertrauen, bevor Sie ihre Inhalte mit dem Absender überprüft haben.
+SINotYetValid=Das zum Signieren der Nachricht verwendete Zertifikat scheint noch nicht gültig zu sein. Stellen Sie sicher, dass die Uhr Ihres Computers richtig eingestellt ist.
+SIUnknownCA=Das zum Signieren der Nachricht verwendete Zertifikat wurde von einer unbekannten Zertifizierungsstelle ausgestellt.
+SIUntrustedCA=Das zum Signieren der Nachricht verwendete Zertifikat wurde von einer Zertifizierungsstelle ausgestellt, der Sie für diese Art von Zertifikaten nicht vertrauen.
+SIExpiredCA=Das zum Signieren der Nachricht verwendete Zertifikat wurde von einer Zertifizierungsstelle ausgestellt, deren eigenes Zertifikat abgelaufen ist. Stellen Sie sicher, dass die Uhr Ihres Computers richtig eingestellt ist.
+SIRevokedCA=Das zum Signieren der Nachricht verwendete Zertifikat wurde von einer Zertifizierungsstelle ausgestellt, deren eigenes Zertifikat gesperrt wurde. Sie sollten der Gültigkeit dieser Nachricht nicht vertrauen, bevor Sie ihre Inhalte mit dem Absender überprüft haben.
+SINotYetValidCA=Das zum Signieren der Nachricht verwendete Zertifikat wurde von einer Zertifizierungsstelle ausgestellt, deren eigenes Zertifikat noch nicht gültig ist. Stellen Sie sicher, dass die Uhr Ihres Computers richtig eingestellt ist.
+SIInvalidCipher=Die Nachricht wurde mit einer Verschlüsselungsstärke signiert, die diese Version Ihrer Software nicht unterstützt.
+SIClueless=Es gibt unbekannte Probleme mit dieser digitalen Signatur. Sie sollten der Gültigkeit dieser Nachricht nicht vertrauen, bevor Sie ihre Inhalte mit dem Absender überprüft haben.
 
-SIPartiallyValidLabel=Nachricht ist unterschrieben
+SIPartiallyValidLabel=Nachricht ist signiert
 SIPartiallyValidHeader=Obwohl die digitale Signatur gültig ist, ist unbekannt, ob der Absender und der Unterzeichner dieselbe Person sind.
 
-SIHeaderMismatch=Die E-Mail-Adresse im Zertifikat des Unterzeichners stimmt nicht jener Adresse überein, von der aus die Nachricht geschrieben wurde. Bitte sehen Sie sich die Details des Unterschrifts-Zertifikats an, um zu sehen, wer die Nachricht unterschrieben hat.
-SICertWithoutAddress=Das zum Unterschreiben der Nachricht verwendete Zertifikat enthält keine E-Mail-Adresse. Bitte sehen Sie sich die Details des Unterschrifts-Zertifikats an, um zu sehen, wer die Nachricht unterschrieben hat.
+SIHeaderMismatch=Die E-Mail-Adresse im Zertifikat des Unterzeichners stimmt nicht jener Adresse überein, von der aus die Nachricht geschrieben wurde. Bitte sehen Sie sich die Details des Signaturzertifikats an, um zu sehen, wer die Nachricht signiert hat.
+SICertWithoutAddress=Das zum Signieren der Nachricht verwendete Zertifikat enthält keine E-Mail-Adresse. Bitte sehen Sie sich die Details des Signaturzertifikats an, um zu sehen, wer die Nachricht signiert hat.
 
 ## Encryption Information strings
 EINoneLabel=Nachricht nicht verschlüsselt
