--- a/de/security/manager/chrome/pipnss/nsserrors.properties
+++ b/de/security/manager/chrome/pipnss/nsserrors.properties
@@ -61,7 +61,7 @@ SSL_ERROR_ILLEGAL_PARAMETER_ALERT=Die SSL-Gegenstelle hat eine Handshake-Nachric
 SSL_ERROR_UNSUPPORTED_CERT_ALERT=Die SSL-Gegenstelle unterstützt keine Zertifikate des Typs, den sie erhalten hat.
 SSL_ERROR_CERTIFICATE_UNKNOWN_ALERT=Die SSL-Gegenstelle hatte ein nicht näher angegebenes Problem mit dem empfangenen Zertifikat.
 SSL_ERROR_GENERATE_RANDOM_FAILURE=SSL ist auf einen Fehler seines Zufallszahlengenerators gestoßen.
-SSL_ERROR_SIGN_HASHES_FAILURE=Die zur Überprüfung Ihres Zertifikats benötigten Daten konnten nicht digital unterschrieben werden.
+SSL_ERROR_SIGN_HASHES_FAILURE=Die zur Überprüfung Ihres Zertifikats benötigten Daten konnten nicht digital signiert werden.
 SSL_ERROR_EXTRACT_PUBLIC_KEY_FAILURE=SSL konnte den öffentlichen Schlüssel nicht aus den Zertifikat der Gegenstelle extrahieren.
 SSL_ERROR_SERVER_KEY_EXCHANGE_FAILURE=Nicht näher angegebener Fehler beim Verarbeiten der SSL-Server-Schlüssel-Aushandlung.
 SSL_ERROR_CLIENT_KEY_EXCHANGE_FAILURE=Nicht näher angegebener Fehler beim Verarbeiten der SSL-Client-Schlüssel-Aushandlung.
@@ -217,8 +217,8 @@ SEC_ERROR_JS_DEL_MOD_FAILURE=Modul konnte nicht gelöscht werden
 SEC_ERROR_OLD_KRL=Die neue KRL ist nicht jünger als die aktuelle.
 SEC_ERROR_CKL_CONFLICT=Die neue CKL hat einen anderen Herausgeber als die aktuelle CKL. Löschen Sie die aktuelle CKL.
 SEC_ERROR_CERT_NOT_IN_NAME_SPACE=Die Zertifizierungsstelle für dieses Zertifikat darf kein Zertifikat mit diesem Namen ausstellen.
-SEC_ERROR_KRL_NOT_YET_VALID=Die Key Revocation List für dieses Zertifikat ist noch nicht gültig.
-SEC_ERROR_CRL_NOT_YET_VALID=Die Zertifikat-Widerrufsliste für dieses Zertifikat ist noch nicht gültig.
+SEC_ERROR_KRL_NOT_YET_VALID=Die Schlüsselsperrliste für dieses Zertifikat ist noch nicht gültig.
+SEC_ERROR_CRL_NOT_YET_VALID=Die Zertifikatsperrliste für dieses Zertifikat ist noch nicht gültig.
 SEC_ERROR_UNKNOWN_CERT=Das angeforderte Zertifikat konnte nicht gefunden werden.
 SEC_ERROR_UNKNOWN_SIGNER=Das Zertifikat des Unterzeichners konnte nicht gefunden werden.
 SEC_ERROR_CERT_BAD_ACCESS_LOCATION=Die Adresse für den Zertifikatsstatus hat ein ungültiges Format.
@@ -237,7 +237,7 @@ SEC_ERROR_OCSP_MALFORMED_RESPONSE=Die Antwort des OCSP-Servers war beschädigt o
 SEC_ERROR_OCSP_UNAUTHORIZED_RESPONSE=Der Unterzeichner der OCSP-Antwort ist nicht authorisiert, einen Status für dieses Zertifikat zu geben.
 SEC_ERROR_OCSP_FUTURE_RESPONSE=Die OCSP-Antwort ist noch nicht gültig (enthält ein Datum in der Zukunft).
 SEC_ERROR_OCSP_OLD_RESPONSE=Die OCSP-Antwort enthält veraltete Informationen.
-SEC_ERROR_DIGEST_NOT_FOUND=Der CMS- oder PKCS#7-Digest wurde in der unterschriebenen Nachricht nicht gefunden.
+SEC_ERROR_DIGEST_NOT_FOUND=Der CMS- oder PKCS#7-Digest wurde in der signierten Nachricht nicht gefunden.
 SEC_ERROR_UNSUPPORTED_MESSAGE_TYPE=Der CMS- oder PKCS#7-Nachrichtentyp wird nicht unterstützt.
 SEC_ERROR_MODULE_STUCK=PKCS#11-Modul konnte nicht entfernt werden, weil es noch immer verwendet wird.
 SEC_ERROR_BAD_TEMPLATE=ASN.1-Daten konnten nicht dekodiert werden. Die angegebene Vorlage war ungültig.
@@ -249,11 +249,11 @@ SEC_ERROR_UNSUPPORTED_ELLIPTIC_CURVE=Nicht unterstützte elliptische Kurve.
 SEC_ERROR_UNSUPPORTED_EC_POINT_FORM=Nicht unterstützte Form eines Punkts der elliptischen Kurve.
 SEC_ERROR_UNRECOGNIZED_OID=Nicht erkannter Objekt-Identifikator.
 SEC_ERROR_OCSP_INVALID_SIGNING_CERT=Ungültiges OCSP-Unterzeichnungszertifikat in OCSP-Antwort.
-SEC_ERROR_REVOKED_CERTIFICATE_CRL=Das Zertifikat wurde in der Zertifikat-Widerrufsliste des Ausstellers widerrufen.
+SEC_ERROR_REVOKED_CERTIFICATE_CRL=Das Zertifikat wurde in der Zertifikatsperrliste des Ausstellers widerrufen.
 SEC_ERROR_REVOKED_CERTIFICATE_OCSP=Der OCSP-Beantworter des Ausstellers meldet, dass das Zertifikat widerrufen wurde.
-SEC_ERROR_CRL_INVALID_VERSION=Die Zertifikat-Widerrufsliste des Ausstellers hat eine unbekannte Versionsnummer.
-SEC_ERROR_CRL_V1_CRITICAL_EXTENSION=Die V1-Zertifikat-Widerrufsliste des Ausstellers hat eine unbekannte kritische Erweiterung.
-SEC_ERROR_CRL_UNKNOWN_CRITICAL_EXTENSION=Die V2-Zertifikat-Widerrufsliste des Ausstellers hat eine unbekannte kritische Erweiterung.
+SEC_ERROR_CRL_INVALID_VERSION=Die Zertifikatsperrliste des Ausstellers hat eine unbekannte Versionsnummer.
+SEC_ERROR_CRL_V1_CRITICAL_EXTENSION=Die V1-Zertifikatsperrliste des Ausstellers hat eine unbekannte kritische Erweiterung.
+SEC_ERROR_CRL_UNKNOWN_CRITICAL_EXTENSION=Die V2-Zertifikatsperrliste des Ausstellers hat eine unbekannte kritische Erweiterung.
 SEC_ERROR_UNKNOWN_OBJECT_TYPE=Unbekannter Objekttyp angegeben.
 SEC_ERROR_INCOMPATIBLE_PKCS11=PKCS#11-Treiber verstößt in inkompatibler Weise gegen die Spezifikation.
 SEC_ERROR_NO_EVENT=Im Moment ist kein neuer Slot-Event verfügbar.
