--- a/de/suite/chrome/mailnews/smime.properties
+++ b/de/suite/chrome/mailnews/smime.properties
@@ -40,6 +40,6 @@
 
 ## @name NS_MSG_UNABLE_TO_OPEN_FILE
 ## LOCALIZATION NOTE: the text can contain HTML tags. 
-1000=Dies ist eine <B>VERSCHLÜSSELTE</B> oder <B>UNTERSCHRIEBENE</B> Nachricht.<br> Dieses Mail-Programm unterstützt verschlüsselte oder unterschriebene Nachrichten nicht.
+1000=Dies ist eine <B>VERSCHLÜSSELTE</B> oder <B>SIGNIERTE</B> Nachricht.<br> Dieses Mail-Programm unterstützt verschlüsselte oder signierte Nachrichten nicht.
 
 
