--- a/si/mail/chrome/messenger/aboutRights.properties
+++ b/si/mail/chrome/messenger/aboutRights.properties
@@ -1,5 +1,5 @@
-aboutRightsTitle=About Your Rights
-buttonLabel=Know your rights…
+aboutRightsTitle=ඔබගේ අයිතීන් පිළිබඳ
+buttonLabel=ඔබගේ අයිතීන් දැනගන්න…
 buttonAccessKey=K
 # LOCALIZATION NOTE (notifyText): %S will be replaced by brandFullName from brand.properties
-notifyText=%S is free and open software from the non-profit Mozilla Foundation.
+notifyRightsText=%S යනු ලාභ-නොලබන මොසිල්ලා පදනමෙන් (non-profit Mozilla Foundation) එන විවෘත හා නිදහස් මෘදුකාංගයකි.
