--- a/si/mail/chrome/messenger/messenger.properties
+++ b/si/mail/chrome/messenger/messenger.properties
@@ -474,6 +474,11 @@ junkAnalysisPercentComplete=Junk analysis %S complete
 processingJunkMessages=නිසරු ලිපි සැකසුම් කරයි
 headerFieldYou=ඔබ
 
+# Messenger bootstrapping messages
+fileNotFoundTitle = ගොනුව හමු නොවීය
+#LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
+fileNotFoundMsg = %S නමින් ගොනුවක් නැත.
+
 # The what's new tab title, shown on version update
 whatsNew=අළුත් දේ මොනවාද
 
