--- a/sk/security/manager/chrome/pipnss/pipnss.properties
+++ b/sk/security/manager/chrome/pipnss/pipnss.properties
@@ -342,7 +342,7 @@ SSLConnectionErrorPrefix=Pri pripájaní k %S sa vyskytla chyba.
 
 certErrorIntro=Server %S používa neplatný bezpečnostný certifikát.
 
-certErrorTrust_SelfSigned=Certifikát nie je dôveryhodný, pretože je podpísaný samým sebou.
+certErrorTrust_SelfSigned=Certifikát nie je dôveryhodný, pretože je podpísaný vlastným podpisom.
 certErrorTrust_UnknownIssuer=Certifikát nie je dôveryhodný, pretože vydavateľ certifikátu je neznámy.
 certErrorTrust_CaInvalid=Certifikát nie je dôveryhodný, pretože bol vydaný neplatnou certifikačnou autoritou.
 certErrorTrust_Issuer=Certifikát nie je dôveryhodný, pretože vydavateľ certifikátu nie je dôveryhodný.
