--- a/sv-SE/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/sv-SE/mail/chrome/messenger-newsblog/newsblog.properties
@@ -1,33 +1,35 @@
-# Status strings used in the subscribe dialog
-
-subscribe-validating=Verifierar RSS-kanalen…
+subscribe-validating-feed=Verifierar RSS-kanalen…
 subscribe-cancelSubscription=Är du säker på att du vill avbryta prenumerationen på den aktuella kanalen?
 subscribe-cancelSubscriptionTitle=Prenumerera på en kanal…
-subscribe-noFeedSelected=<ingen RSS-kanal vald>
+subscribe-noFeedIsSelected=<ingen RSS-kanal vald>
 subscribe-feedAlreadySubscribed=Du prenumererar redan på denna kanal.
 subscribe-errorOpeningFile=Kan inte öppna filen.
 
 subscribe-OPMLImportTitle=Välj OPML-fil att importera
 subscribe-OPMLExportTitle=Exportera kanaler som en OPML-fil
-subscribe-OPMLExportFileTitle=Thunderbird OPML-export
-subscribe-OPMLExportFileName=MinaThunderbirdKanaler.opml
-#LOCALIZATION NOTE: %S is the name of the OPML file the user tried to import.
+## LOCALIZATION NOTE(subscribe-OPMLExportFileDialogTitle): %S is the brandShortName
+subscribe-OPMLExportFileDialogTitle=%S OPML-export
+## LOCALIZATION NOTE(subscribe-OPMLExportDefaultFileName): %S is the brandShortName
+subscribe-OPMLExportDefaultFileName=Mina%SKanaler.opml
+## LOCALIZATION NOTE(subscribe-errorInvalidOPMLFile): %S is the name of the OPML file the user tried to import.
 subscribe-errorInvalidOPMLFile=Antingen är %S inte en giltig OPML-fil eller så uppstod ett fel vid importen av filen.
 
 subscribe-OPMLExportOPMLFilesFilterText=OPML-filer
 
-#LOCALIZATION NOTE: %S is the name of the feed the user wants to unsubscribe from.
 subscribe-confirmFeedDeletionTitle=Ta bort kanal
+## LOCALIZATION NOTE(subscribe-confirmFeedDeletion): %S is the name of the feed the user wants to unsubscribe from.
 subscribe-confirmFeedDeletion=Är du säker på att du vill avsluta prenumerationen på kanalen: \n %S?
 
-# when downloading new feed items from the subscribe dialog. 
-# LOCALIZATION NOTE: Do not translate %d in the following line.
-# The first %S will receive the number of messages received so far;
-# the second %S will receive the total number of messages
-subscribe-fetchingFeedItems=Hämtar kanalens artiklar (%S av %S)
+## LOCALIZATION NOTE(subscribe-gettingFeedItems):
+##  - The first %S is the number of articles processed so far;
+##  - The second %S is the total number of items
+subscribe-gettingFeedItems=Hämtar kanalens artiklar (%S av %S)…
 
 newsblog-noNewArticlesForFeed=Det finns inga nya artiklar i denna kanal.
+newsblog-networkErrorTitle=Nätverksfel
+## LOCALIZATION NOTE(newsblog-networkError): %S is the feed URL
 newsblog-networkError=%S kunde inte hittas. Kontrollera namnet och försök igen.
-newsblog-invalidFeed=%S är inte en giltig RSS-kanal.
-newsblog-getNewMailCheck=Kontrollerar om RSS-kanalen har nya poster
-
+newsblog-feedNotValidTitle=Ogiltig kanal
+## LOCALIZATION NOTE(newsblog-feedNotValid): %S is the feed URL
+newsblog-feedNotValid=%S är inte en giltig RSS-kanal.
+newsblog-getNewMsgsCheck=Kontrollerar om kanalen har nya poster
