--- a/nb-NO/mail/chrome/messenger/messenger.properties
+++ b/nb-NO/mail/chrome/messenger/messenger.properties
@@ -465,6 +465,11 @@ emptyTrashDontAsk=Ikke spør om dette igjen.
 junkAnalysisPercentComplete=Analyse av uønsket post %S fullført
 processingJunkMessages=Behandler uønsket e-post
 
+# Messenger bootstrapping messages
+fileNotFoundTitle = Fant ikke filen
+#LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
+fileNotFoundMsg = Filen %S eksisterer ikke.
+
 # second person direct object pronoun; used in the collapsed header view if
 # the user is in the To or Cc field of a message
 headerFieldYou=Deg
