Update nb-NO l10n

--- a/nb-NO/suite/chrome/common/permissions/cookieViewer.properties
+++ b/nb-NO/suite/chrome/common/permissions/cookieViewer.properties
@@ -53,3 +53,6 @@ deleteAllCookiesYes=&Slett
 deleteAllCookiesSites=Er du sikker på at du vil slette alle infokapsel-nettsteder?
 deleteAllSitesTitle=Slett alle nettsted
 deleteAllSitesYes=&Slett
+deleteSelectedCookies=Er du sikker på at du vil slette de valgte infokapslene?
+deleteSelectedCookiesTitle=Slett valgte infokapsler
+deleteSelectedCookiesYes=&Slett
