--- a/nb-NO/suite/chrome/mailnews/messenger.properties
+++ b/nb-NO/suite/chrome/mailnews/messenger.properties
@@ -421,3 +421,8 @@ emptyTrashDontAsk=Ikke spør om dette igjen.
 # junkCommands.js
 junkAnalysisPercentComplete=Analyse av uønsket post %S fullført
 processingJunkMessages=Behandler uønsket e-post
+
+# Messenger bootstrapping messages
+fileNotFoundTitle = Fant ikke filen
+#LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
+fileNotFoundMsg = Filen %S eksisterer ikke.
